algunas mejoras en proyectos y Portfolio

--- a/Secciones/nosotros.html
+++ b/Secciones/nosotros.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Portfolio.html"> Portfolio </a>
+                <a class="nav-link" href="portfolio.html"> Portfolio </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="proyectos.html"> Proyectos </a>
@@ -114,8 +114,8 @@
   <div class="container">
     <div class="row">
       <div class="col align-self-start">
-                <h2 class="display-6 fw-bold">Sigueme!</h2>
-            <p class="lead"><br>Visita mis redes sociales...</p>
+        <h3 class=" fw-bold">Sigueme!</h3>
+        <h6 class="fw-light"><br>Visita mis redes sociales...</h6>
       </div>
     </div>
 </div><!-- /lc-block --> <!-- /lc-block -->
