--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proyectos</title>
+  <title>Fotografía Automotriz</title>
   <link rel="stylesheet" href="../CSS/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 </head> <!-- Fin del header-->
@@ -25,7 +25,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                  <a class="nav-link" href="secciones/Portfolio.html"> Portfolio </a>
+                  <a class="nav-link" href="secciones/portfolio.html"> Portfolio </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="secciones/proyectos.html"> Proyectos </a>
@@ -53,22 +53,22 @@
       <div class="carousel-item active">
         <img src="./assets/Hero-BG-2022_3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="display-4">Fotografía Automotriz</h1>
-          <p>Conoce mas de mi trabajo recorriendo mi página web.</p>
+          <h1 class="display-1 fw-bold">Fotografía Automotriz</h1>
+          <p class="fw-light">Conoce mas de mi trabajo recorriendo mi página web.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./assets/Hero-BG-2022.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="display-4">Atomósferas</h1>
-          <p>En mis fotografías encontrarás un estilo fotográfico con luz cuidada y natural.</p>
+          <h1 class="display-1 fw-bold">Atomósferas</h1>
+          <p class="fw-light">En mis fotografías encontrarás un estilo fotográfico con luz cuidada y natural.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./assets/Hero-BG-2022_2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="display-4">Producto</h1>
-          <p>La fotografía de vehículos puede ser un diferencial para el fotógrafo que logra destacarse.</p>
+          <h1 class="display-1 fw-bold">Producto</h1>
+          <p class="fw-light"> La fotografía de vehículos puede ser un diferencial para el fotógrafo que logra destacarse.</p>
         </div>
       </div>
     </div>
@@ -133,9 +133,10 @@
     <div class="d-flex text-center" lc-helper="background" style="min-height: 20vh; background-attachment: fixed; background-size:cover; background-position: center center;background-color:rgb(255, 255, 255);background-image: url(./assets/Hero-BG-2022_AMARILLO.jpg);">
       <div class="lc-block  my-3 align-self-center w-100 py-5">
         <div editable="rich">
-            <h2 class="display-4">Cursos de fotografía</h2><p class="p--lead">¡Conoce algunos de los cursos que tengo para vos!</p>
+            <h2 class="display-3 fw-bold">Cursos de fotografía</h2>
+            <p class="text-center">¡Conoce algunos de los cursos que tengo para vos!</p>
         </div>
-        <a class="btn btn-success" href="./Secciones/Portfolio.html" role="button">Saber + </a>
+        <a class="btn btn-outline-light btn-rounded" href="./Secciones/Portfolio.html" role="button">Saber + </a>
       </div>
     </div> 
 <!-- FIN CLASES-->
@@ -157,15 +158,16 @@
           </svg>
         </div>
         <!-- /lc-block -->
-        <div class="lc-block mb-3 me-lg-5">
+        <div class="lc-block md-3 me-lg-2">
           <div editable="rich">
-            <h2 class="display-4">Proximanete más proyectos</h2>
-            <p class="p--lead">Estamos trabajando en un plan de acción para incluir mas proyectos, en donde incluso tu puedas participar.</p>
+            <h2 class="display-3 fw-bold">Proximanete más proyectos</h2>
+            <p class="text-start">Estamos trabajando en un plan de acción para incluir mas proyectos, en donde incluso tu puedas participar.</p>
           </div>
         </div>
-        <div class="lc-block">
-          <a class="btn btn-primary mt-2" href="#" role="button">Saber +</a>
+        <div class="lc-block text-end">
+           <a class="btn btn-outline-light btn-rounded" href="../Secciones/proyectos.html" role="button">Saber +</a>
         </div>
+
         <!-- /lc-block -->
       </div>
     </div>
