--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/ main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 
 </head>
@@ -158,12 +158,12 @@
   </div>   
   <!-- FIN DE INFO + MAPA-->  
   <!-- Inicio del Footer-->
- <footer>
+<footer>
   <div class="container">
     <div class="row">
       <div class="col align-self-start">
-                <h2 class="display-6 fw-bold">Sigueme!</h2>
-            <p class="lead"><br>Visita mis redes sociales...</p>
+        <h3 class=" fw-bold">Sigueme!</h3>
+        <h6 class="fw-light"><br>Visita mis redes sociales...</h6>
       </div>
     </div>
 </div><!-- /lc-block --> <!-- /lc-block -->
