--- a/Secciones/proyectos.html
+++ b/Secciones/proyectos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
-    <link rel="stylesheet" href="../CSS/.css">
+    <link rel="stylesheet" href=".../CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Portfolio.html"> Portfolio </a>
+                <a class="nav-link" href="portfolio.html"> Portfolio </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="proyectos.html"> Proyectos </a>
@@ -67,8 +67,8 @@
         <div class="row align-items-md-center mb-5">
           <div class="col-md-12">
             <div class="lc-block text-center"><span editable="inline" class="small mt-4 d-block">Una mirada distinta en la fotografía</span>
-              <h2 editable="inline" class="display-2 mb-0"><b>Mis Proyectos</b></h2>
-              <p editable="inline"> Tratando de ver las cosas simples desde otra perspectiva <br> debemos comenzar a innovar si es que aún no lo hemos hecho.</p>
+              <h2 editable="inline" class="display-6 fw-bold"><b>Mis Proyectos</b></h2>
+              <p editable="inline"> Tratando de ver las cosas simples desde otra perspectiva, <br> debemos comenzar a innovar si es que aún no lo hemos hecho.</p>
             </div><!-- /lc-block -->
           </div><!-- /col -->
         </div>
@@ -164,8 +164,8 @@
   <div class="container">
     <div class="row">
       <div class="col align-self-start">
-                <h2 class="display-6 fw-bold">Sigueme!</h2>
-            <p class="lead"><br>Visita mis redes sociales...</p>
+        <h3 class=" fw-bold">Sigueme!</h3>
+        <h6 class="fw-light"><br>Visita mis redes sociales...</h6>
       </div>
     </div>
 </div><!-- /lc-block --> <!-- /lc-block -->
