agregando elementos al NAV BAR (clases)

--- a/Index.html
+++ b/Index.html
@@ -11,35 +11,36 @@
 </head> <!-- Fin del header-->
 <!-- Inicio del NAV BAR-->
 <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-        <div class="container-fluid d-flex justify-content-end">
-          <a class="navbar-brand" href="#">
-            <img src="./assets/LOGO-LF (2).png" alt="" width="150">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
-                  <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="secciones/portfolio.html"> Portfolio </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="secciones/proyectos.html"> Proyectos </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="secciones/nosotros.html"> Nosotros </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="secciones/contacto.html"> Contacto </a>
-                  </li>
-                </ul>
-              </div>   
-        </div>
-      </nav><!-- FIN DE NAVBAR-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <div class="container-fluid d-flex justify-content-end">
+      <a class="navbar-brand" href="#">
+        <img src="../assets/LOGO-LF (2).png" alt="" width="150">
+      </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./secciones/portfolio.html"> Portfolio </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./secciones/clases.html"> Clases </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./secciones/proyectos.html"> Proyectos </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./secciones/nosotros.html"> Nosotros </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./secciones/contacto.html"> Contacto </a>
+          </li>
+      </div>
+</nav><!-- FIN DE NAVBAR-->
 
 <!-- SECCION HEADER-- SECCION HERO--> 
 <header>
