--- a/Secciones/Portfolio.html
+++ b/Secciones/Portfolio.html
@@ -9,33 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-        <div class="container-fluid d-flex justify-content-end">
-          <a class="navbar-brand" href="#">
-            <img src="../assets/LOGO-LF (2).png" alt="" width="150">
-          </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html"> Portfolio </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="proyectos.html"> Proyectos </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html"> Nosotros </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html"> Contacto </a>
-              </li>
-          </div>
-     </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <div class="container-fluid d-flex justify-content-end">
+      <a class="navbar-brand" href="#">
+        <img src="../assets/LOGO-LF (2).png" alt="" width="150">
+      </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Portfolio.html"> Portfolio </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="clases.html"> Clases </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="proyectos.html"> Proyectos </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html"> Nosotros </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html"> Contacto </a>
+          </li>
+      </div>
+</nav>
     <!-- FIN DE NAVBAR-->
     <header> <!-- header -->
       <div class="d-flex min-vh-100" lc-helper="background" style="background:url(../assets/Hero-BG-2022_2.jpg)  center / cover no-repeat; background-color:#444; background-blend-mode: overlay;">
