--- a/Secciones/clases.html
+++ b/Secciones/clases.html
@@ -11,33 +11,36 @@
 </head>
 <body>
   <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-            <div class="container-fluid d-flex justify-content-end">
-              <a class="navbar-brand" href="#">
-                <img src="../assets/LOGO-LF (2).png" alt="" width="150">
-              </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Portfolio.html"> Portfolio </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="proyectos.html"> Proyectos </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html"> Nosotros </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html"> Contacto </a>
-                  </li>
-              </div>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container-fluid d-flex justify-content-end">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/LOGO-LF (2).png" alt="" width="150">
+        </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Portfolio.html"> Portfolio </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="clases.html"> Clases </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="proyectos.html"> Proyectos </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html"> Nosotros </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html"> Contacto </a>
+            </li>
+        </div>
+  </nav>
    </header> <!-- FIN DEL HEADER ---->
    
 
