--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -28,6 +28,9 @@
                 <a class="nav-link" href="Portfolio.html"> Portfolio </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="clases.html"> Clases </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="proyectos.html"> Proyectos </a>
               </li>
               <li class="nav-item">
