--- a/Secciones/clases.html
+++ b/Secciones/clases.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clases</title>
-    <link rel="stylesheet" href="../CSS/.css">
+    <link rel="stylesheet" href="../CSS/ main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 
 </head>
@@ -346,14 +346,10 @@
  
  <footer>
   <div class="container">
-    <div class="col-lg-6 p-lg-6">
-      <div class="lc-block mb-6">
-        <div editable="rich">
-  
-          <h2 class="display-6 fw-bold">Sigueme!</h2>
-  
-          <p class="lead"><br>Visita mis redes sociales...</p>
-        </div>
+    <div class="row">
+      <div class="col align-self-start">
+          <h3 class="display-6 fw-bold">Sigueme!</h3>
+          <h3 class="lead"><br>Visita mis redes sociales...</h3>
       </div>
     </div>
   </div><!-- /lc-block --> <!-- /lc-block -->
