--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fotografía Automotriz</title>
-  <link rel="stylesheet" href="../CSS/main.css">
+  <link rel="stylesheet" href="./CSS/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 </head> <!-- Fin del header-->
 <!-- Inicio del NAV BAR-->
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container-fluid d-flex justify-content-end">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="../assets/LOGO-LF (2).png" alt="" width="150">
       </a>
@@ -44,32 +44,34 @@
 
 <!-- SECCION HEADER-- SECCION HERO--> 
 <header>
+  
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="carousel-inner ">
       <div class="carousel-item active">
+        <div class="align-self-center text-center text-light col-md-8 offset-md-2"></div>
         <img src="./assets/Hero-BG-2022_3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="display-1 fw-bold">Fotografía Automotriz</h1>
-          <p class="fw-light">Conoce mas de mi trabajo recorriendo mi página web.</p>
+          <h5 class="display-1 fw-bold">Fotografía Automotriz</h>
+          <p class="lead2 fw-light">Conoce mas de mi trabajo recorriendo mi página web.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./assets/Hero-BG-2022.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h1 class="display-1 fw-bold">Atomósferas</h1>
-          <p class="fw-light">En mis fotografías encontrarás un estilo fotográfico con luz cuidada y natural.</p>
+          <p class="lead2 fw-light">En mis fotografías encontrarás un estilo fotográfico con luz cuidada y natural.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./assets/Hero-BG-2022_2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h1 class="display-1 fw-bold">Producto</h1>
-          <p class="fw-light"> La fotografía de vehículos puede ser un diferencial para el fotógrafo que logra destacarse.</p>
+          <p class="lead2 fw-light"> La fotografía de vehículos puede ser un diferencial para el fotógrafo que logra destacarse.</p>
         </div>
       </div>
     </div>
@@ -86,7 +88,7 @@
 <!-- FIN SECCION HEADER-->
 
 <!-- SECCION Portfolio-->
-<section class:"cards">
+<section class:"Cards">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -134,8 +136,8 @@
     <div class="d-flex text-center" lc-helper="background" style="min-height: 20vh; background-attachment: fixed; background-size:cover; background-position: center center;background-color:rgb(255, 255, 255);background-image: url(./assets/Hero-BG-2022_AMARILLO.jpg);">
       <div class="lc-block  my-3 align-self-center w-100 py-5">
         <div editable="rich">
-            <h2 class="display-3 fw-bold">Cursos de fotografía</h2>
-            <p class="text-center">¡Conoce algunos de los cursos que tengo para vos!</p>
+            <h2 class="lead2 display-3 fw-bold">Cursos de fotografía</h2>
+            <p class="lead2 text-center">¡Conoce algunos de los cursos que tengo para vos!</p>
         </div>
         <a class="btn btn-outline-light btn-rounded" href="./Secciones/Portfolio.html" role="button">Saber + </a>
       </div>
@@ -153,7 +155,7 @@
       </div>
       <div class="col-md-7" style="padding:10vw">
         <div class="lc-block mb-2">
-          <svg width="3em" height="3em" viewBox="0 0 16 16" lc-helper="svg-icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <svg width="3em" height="3em" viewBox="0 0 16 16" lc-helper="svg-icon" fill="white" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"></path>
             <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
           </svg>
@@ -161,8 +163,8 @@
         <!-- /lc-block -->
         <div class="lc-block md-3 me-lg-2">
           <div editable="rich">
-            <h2 class="display-3 fw-bold">Proximanete más proyectos</h2>
-            <p class="text-start">Estamos trabajando en un plan de acción para incluir mas proyectos, en donde incluso tu puedas participar.</p>
+            <h2 class="lead2 display-3 fw-bold">Proximanete más proyectos</h2>
+            <p class="lead2 text-start">Estamos trabajando en un plan de acción para incluir mas proyectos, en donde incluso tu puedas participar.</p>
           </div>
         </div>
         <div class="lc-block text-end">
