--- a/Secciones/nosotros.html
+++ b/Secciones/nosotros.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container-fluid d-flex justify-content-end">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="../assets/LOGO-LF (2).png" alt="" width="150">
       </a>
@@ -24,7 +24,7 @@
             <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio.html"> Portfolio </a>
+            <a class="nav-link" href="portfolio.html"> Portfolio </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="clases.html"> Clases </a>
@@ -41,7 +41,7 @@
       </div>
 </nav>
 <header> <!-- header -->
-  <div class="d-flex min-vh-100" lc-helper="background" style="background:url(../assets/KIA/Kia7.jpg)  center / cover no-repeat; background-color:#444; background-blend-mode: overlay;">
+  <div class="d-flex min-vh-100" lc-helper="background" style="background:url(../assets/HEADER-BG/DSCN9906\ \(1\).jpg)  center / cover no-repeat; background-color:#444; background-blend-mode: overlay;">
     <div class="align-self-center text-center text-light col-md-8 offset-md-2">
       <div class="lc-block mb-4">
         <div editable="rich">
@@ -51,9 +51,9 @@
   
       <div class="lc-block">
         <div editable="rich">
-          <p class="lead">Quiero contarte quien soy en éste breve espacio, <br>
+          <p class="lead2">Quiero contarte quien soy en éste breve espacio,
             espero que mi historia sea de inspiración para vos.</p>
-            <p class="lead">¡Gracias por tu tiempo! </p>
+            <p class="lead2">¡Gracias por tu tiempo! </p>
         </div>
       </div>
   
@@ -75,13 +75,13 @@
 		<div class="col-md-4 align-self-center">
 			<div class="lc-block text-secondary">
 				<div editable="rich">
-					<p>Fotografo por casualidad</p>
+					<h3 class="lead display-3 fw-bolder">Fotografo por casualidad</h3> <br>
 				</div>
 			</div>
 			<div class="lc-block border-bottom">
 				<div editable="rich">
 
-					<h1>Lucas Ferreyra</h1>
+					<h1>Lucas Ferreyra</h1> <br>
 
 
 				</div>
@@ -93,14 +93,14 @@
 			</div><!-- /lc-block -->
 			<div class="lc-block">
 				<div editable="rich">
-					<p>Nací en el año 1979, en una provincia al norte de Argentina. Mi interés en las fotografía nació a partir de los 18 años en mi primer año de la carrera de Licenciatura en Dirección de Cine y TV, carrera que deje al finalizar el año. De todas formas me introduje en los estudios de comunicación y puedo decir que tengo un titulo de periodista. Pero no fué hasta hace un año que ese interés apasionado por la imagen volvió a renacer, pero esta vez orientado a la belleza de los automóviles&nbsp;</p>
+					<p class="lead3 fw-light">Nací en el año 1979, en una provincia al norte de Argentina. Mi interés en las fotografía nació a partir de los 18 años en mi primer año de la carrera de Licenciatura en Dirección de Cine y TV, carrera que deje al finalizar el año. De todas formas me introduje en los estudios de comunicación y puedo decir que tengo un titulo de periodista. Pero no fué hasta hace un año que ese interés apasionado por la imagen volvió a renacer, pero esta vez orientado a la belleza de los automóviles&nbsp;</p>
 				</div>
 			</div><!-- /lc-block -->
 		</div><!-- /col -->
 		<div class="col-md-4">
 			<div class="lc-block">
 				<div editable="rich">
-					<p>Es así que a mis 42 años me encuentor en la necesidad de fotografiar casí solo por pasión a cada automovil que me presentan. Tengo la fortuna de trabajar en el sector automotriz y eso ha facilitado el acceso a modelos de los mas diversos en un corto tiempo. SI querés ver algunos de mis trabajos, por favor no dejes de visitar mi portfolio.</p>
+					<p class="lead3 fw-light">Es así que a mis 42 años me encuentor en la necesidad de fotografiar casí solo por pasión a cada automovil que me presentan. Tengo la fortuna de trabajar en el sector automotriz y eso ha facilitado el acceso a modelos de los mas diversos en un corto tiempo. SI querés ver algunos de mis trabajos, por favor no dejes de visitar mi portfolio.</p>
 				</div>
 			</div><!-- /lc-block -->
 			<div class="lc-block mb-2">
@@ -115,8 +115,8 @@
   <div class="container">
     <div class="row">
       <div class="col align-self-start">
-        <h3 class=" fw-bold">Sigueme!</h3>
-        <h6 class="fw-light"><br>Visita mis redes sociales...</h6>
+        <h3 class="display-4 fw-bold">Sigueme!</h3>
+        <h6 class="display-6 fw-light"><br>Visita mis redes sociales...</h6>
       </div>
     </div>
 </div><!-- /lc-block --> <!-- /lc-block -->
