--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../assets/LOGO-LF (2).png" alt="" width="150">
+        <img src="../assets/LOGO-LF.png" alt="" width="150">
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
