--- a/Secciones/nosotros.html
+++ b/Secciones/nosotros.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../assets/LOGO-LF (2).png" alt="" width="150">
+        <img src="../assets/LOGO-LF.png" alt="" width="150">
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html"> Portfolio </a>
