--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./secciones/portfolio.html"> Portfolio </a>
+            <a class="nav-link" href="./Secciones/portfolio.html"> Portfolio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./secciones/clases.html"> Clases </a>
+            <a class="nav-link" href="./Secciones/clases.html"> Clases </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./secciones/proyectos.html"> Proyectos </a>
+            <a class="nav-link" href="./Secciones/proyectos.html"> Proyectos </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./secciones/nosotros.html"> Nosotros </a>
+            <a class="nav-link" href="./Secciones/nosotros.html"> Nosotros </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./secciones/contacto.html"> Contacto </a>
+            <a class="nav-link" href="./Secciones/contacto.html"> Contacto </a>
           </li>
       </div>
 </nav><!-- FIN DE NAVBAR-->
