--- a/secciones/clases.html
+++ b/secciones/clases.html
@@ -88,7 +88,7 @@
 
               <h2 class="display-4 fw-bold rfs-12">¡Explota tu creatividad!</h2>
 
-              <p class="lead3"><br>Mis clases te permitiran hacer realidad esas tomas que siempre quiciste lograr.</p>
+              <p class="lead3"><br>Mis clases te permitiran hacer realidad esas tomas que siempre quisiste lograr.</p>
             </div>
           </div><!-- /lc-block -->
           <!-- /lc-block -->
@@ -304,7 +304,7 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <p editable="inline" class="lead3 fw-light">Nivel 1</p>
-          <h2 editable="inline" class="display-4 fw-bold rfs-12">Intrucción a la fotografía</h2>
+          <h2 editable="inline" class="display-4 fw-bold rfs-12">Introducción a la fotografía</h2>
           <div editable="rich">
             <p class="lead">En este curso encontrarás las bases para desarrollar tu carrera como fotógrafo, tanto en el ambito automotríz como en el de la moda, prensa y eventos.</p>
           </div>
@@ -316,7 +316,7 @@
           <p editable="inline" class="lead3 fw-light">Nivel 2</p>
           <h2 editable="inline" class="display-4 fw-bold rfs-12">Iluminación</h2>
           <div editable="rich">
-            <p class="lead">Aprende a iluminar tus escena, ya sea con luz natural o artificial. Trabaja con distintos tipos de iluminación artítica.</p>
+            <p class="lead">Aprende a iluminar tus escenas, ya sea con luz natural o artificial. Trabaja con distintos tipos de iluminación artística.</p>
           </div>
         </div>
       </div>
@@ -326,7 +326,7 @@
           <p editable="inline" class="lead3 fw-light">Nivel 3</p>
           <h2 editable="inline" class="display-4 fw-bold rfs-12">Fotografía Automotriz</h2>
           <div editable="rich">
-            <p class="lead">EN este curso aprenderás los secretos de la fotografía automotirz, desde la luz, los ángulos y como hacer que tu foto destaca del resto.</p>
+            <p class="lead">En este curso aprenderás los secretos de la fotografía automotriz, desde la luz, los ángulos y como hacer que tu foto destaca del resto.</p>
           </div>
         </div>
       </div>
@@ -348,11 +348,10 @@
   <div class="container">
     <div class="row">
       <div class="col align-self-start">
-          <h3 class="display-4 fw-bold">Sígueme!</h3>
-          <h3 class="lead3"><br>Visita mis redes sociales...</h3>
+        <h3 class="display-4 fw-bold">Sigueme!</h3>
+        <h6 class="display-6 fw-light"><br>Visita mis redes sociales...</h6>
       </div>
     </div>
-  </div><!-- /lc-block --> <!-- /lc-block -->
   <div class="container-fluid py-5">
     <div class="row text-center">
        <div class="col-md-4">
@@ -364,7 +363,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="http://https://www.facebook.com/LucasFerreyraOK" class="h3 text-dark text-decoration-none">Facebook</a></p>
+                <p><a href="https://www.facebook.com/LucasFerreyraOK" target=blanck class="h3 text-dark text-decoration-none">Facebook</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -383,7 +382,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="https://www.linkedin.com/in/lucasferreyra" class="h3 text-dark text-decoration-none">Linkedin</a></p>
+                <p><a href="https://www.linkedin.com/in/lucasferreyra" target=blanck class="h3 text-dark text-decoration-none">Linkedin</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -402,7 +401,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="https://twitter.com/lferreyra?lang=es" class="h3 text-dark text-decoration-none">Twitter</a></p>
+                <p><a href="https://twitter.com/lferreyra?lang=es" target=blanck class="h3 text-dark text-decoration-none">Twitter</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -421,4 +420,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>       
 </body>
 <!-- fin del Body-->
+</html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>       
+</body>
 </html>
