--- a/secciones/portfolio.html
+++ b/secciones/portfolio.html
@@ -83,27 +83,27 @@
   <div class="row text-center text-lg-start">
 
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/RAM/ram-005.jpeg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/RAM/ram-004.jpeg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/ram/ram-003.jpeg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a  class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/ram/ram-002.jpeg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a  class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/ram/ram-001.jpeg" alt="">
       </a>
     </div>
@@ -119,32 +119,32 @@
   <div class="row text-center text-lg-start">
 
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/Volkswagen/Volkswagen GOLF GTI/DSCN9353.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a  class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/Volkswagen/Volkswagen GOLF GTI/DSCN9354.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/Volkswagen/Volkswagen GOLF GTI/DSCN9358.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/Volkswagen/Volkswagen GOLF GTI/DSCN9360.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/Volkswagen/Volkswagen GOLF GTI/DSCN9362.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/Volkswagen/Volkswagen GOLF GTI/DSCN9370.jpg" alt="">
       </a>
     </div>
@@ -159,27 +159,27 @@
 
   <div class="row text-center text-lg-start">
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/KIA/kia9.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/KIA/kia7.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/kia/Kia5.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/KIA/kia6.jpg" alt="">
       </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
+      <a class="d-block mb-4 h-100">
         <img class="img-fluid img-thumbnail" src="..//assets/KIA/Kia3.jpg" alt="">
       </a>
     </div>
@@ -209,7 +209,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="http://https://www.facebook.com/LucasFerreyraOK" class="h3 text-dark text-decoration-none">Facebook</a></p>
+                <p><a href="https://www.facebook.com/LucasFerreyraOK" target=blanck class="h3 text-dark text-decoration-none">Facebook</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -228,7 +228,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="https://www.linkedin.com/in/lucasferreyra" class="h3 text-dark text-decoration-none">Linkedin</a></p>
+                <p><a href="https://www.linkedin.com/in/lucasferreyra" target=blanck class="h3 text-dark text-decoration-none">Linkedin</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
@@ -247,7 +247,7 @@
           <!-- /lc-block -->
           <div class="lc-block mb-4">
              <div editable="rich">
-                <p><a href="https://twitter.com/lferreyra?lang=es" class="h3 text-dark text-decoration-none">Twitter</a></p>
+                <p><a href="https://twitter.com/lferreyra?lang=es" target=blanck class="h3 text-dark text-decoration-none">Twitter</a></p>
              </div>
           </div>
           <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
