--- a/secciones/proyectos.html
+++ b/secciones/proyectos.html
@@ -77,7 +77,7 @@
               <span class="badge bg-dark" editable="inline">FOTO AUTOMOTRIZ</span>
             </div>
             <div class="lc-block mb-4">
-              <h2 editable="inline">Estoy trabajando para traerte nuesvos proyectos en los que podrás participar.</h2>
+              <h2 editable="inline">Estoy trabajando para traerte nuevos proyectos en los que podrás participar.</h2>
             </div>
             <div class="lc-block">
 
@@ -180,7 +180,7 @@
             <!-- /lc-block -->
             <div class="lc-block mb-4">
                <div editable="rich">
-                  <p><a href="http://https://www.facebook.com/LucasFerreyraOK" class="h3 text-dark text-decoration-none">Facebook</a></p>
+                  <p><a href="https://www.facebook.com/LucasFerreyraOK" class="h3 text-dark text-decoration-none">Facebook</a></p>
                </div>
             </div>
             <div class="lc-block col-2 offset-5 border-bottom border-2 border-dark">
