--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="profile-card-2"><img src="./assets/Portfolio-KIA-deg.jpg" class="img img-responsive">
               <div class="profile-name">KIA <br> 
                 SORENTO</div>
-                <a class="btn btn-success" href="./Secciones/Portfolio.html" role="button">Saber + </a>
+                <a class="btn btn-success" href="./secciones/portfolio.html" role="button">Saber + </a>
               <div class="profile-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
           </div>
       </div>
@@ -108,7 +108,7 @@
           <div class="profile-card-2"><img src="./assets/Portfolio-VW-deg.jpg" class="img img-responsive">
               <div class="profile-name">VOLKSWAGEN
                   <br>GOLF GTI</div>
-                  <a class="btn btn-success" href="./Secciones/Portfolio.html" role="button">Saber + </a>
+                  <a class="btn btn-success" href="./secciones/portfolio.html" role="button">Saber + </a>
               <div class="profile-overview">
                   <div class="profile-overview">
                   </div>
@@ -121,7 +121,7 @@
           <div class="profile-card-2"><img src="./assets/Portfolio-RAM-deg.jpg" class="img img-responsive">
             <div class="profile-name">CHRYSLER
               <br>RAM</div>
-          <a class="btn btn-success" href="./secciones/Portfolio.html" role="button">Saber + </a>
+          <a class="btn btn-success" href="./secciones/portfolio.html" role="button">Saber + </a>
           <div class="profile-overview">
               <div class="profile-overview">
               </div>
